Isolate nrt_utils incremental commands from core (#694)